@@ -128,7 +128,6 @@ In such case, you may
 <tt><b>ClientServer</b></tt> run:
         <ul>
 	<li><tt><b>make</b></tt>
-	<li><tt><b>make install</b></tt>
         </ul>
     </ul>
 
@@ -170,7 +169,7 @@ In such case, you may
          Patrice Ossona de Mendez</a></address></td>
       </tr></table>
     <hr><!-- hhmts start -->
-Last modified: Tue Mar 17 17:38:38 CET 2009
+Last modified: Thu Mar 19 13:35:10 CET 2009
 <!-- hhmts end -->
 </body>
 
