@@ -94,6 +94,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_VPRINTF
 
 echo "############### RESULTS: ######################"
+echo host=$host
 echo system=$SYSTEM
 echo qmake=$QT4
 echo QT4DIR=$QT4DIR
