@@ -27,6 +27,6 @@ AWK = @AWK@
 ENABLE_STATIC = @enable_static@
 QMAKE_CXXFLAGS_RELEASE =  @CPU@
 #debug_level 1-normal (used for profiler) 2-check arrays (slow)
-DEBUG_LEVEL = 1
+DEBUG_LEVEL = 2
 
 
